# add_executable(test3_2_insert test3_2_insert.cpp)
# add_executable(selectall_mysql_bindcol.EXE selectall_mysql_bindcol.cpp)
# add_executable(selectall_mysql_direct.EXE selectall_mysql_direct.cpp)
# add_executable(select_mysql_noprepare.EXE select_mysql_noprepare.cpp)
# add_executable(select_mysql_prepare.EXE select_mysql_prepare.cpp)
# add_executable(selectall_mysql_noprepare.EXE selectall_mysql_noprepare.cpp)
# add_executable(selectall_mysql_prepare.EXE selectall_mysql_prepare.cpp)
# add_executable(INSERTER2.EXE insert_mysql.cpp)
# add_executable(main2 main2.cpp)
# add_executable(mysql0 test0_one_call.cpp)
# add_executable(mysql1 test0_multi_call.cpp)
# add_executable(INSERTER.EXE insert.cpp)
# add_executable(TRUNCATER.EXE truncate.cpp)
# add_executable(test1 test1_select_where.cpp)
# add_executable(test2 test2_select_all.cpp)
# add_executable(test3 test3_update.cpp)
# add_executable(test4 test4_connection.cpp)
# add_executable(test5 test5_bindcol.cpp)
# add_executable(test6 test6_connection_pool.cpp)
# add_executable(OdbcConnectBuilder-test OdbcConnectBuilder-test.cpp)


add_executable(test_1_dbconnect test_1_dbconnect.cpp)
add_executable(test_2_directExecute test_2_directExecute.cpp)
add_executable(test_3_preparedExecute test_3_preparedExecute.cpp)
add_executable(test_4_preparedStmt test_4_preparedStmt.cpp)
add_executable(test_5_bindCol_One test_5_bindCol_One.cpp)
add_executable(test_6_bindCol_Many test_6_bindCol_Many.cpp)
add_executable(test_7_update test_7_update.cpp)



add_executable(test_odbcconnectbuilder test_odbcconnectbuilder.cpp)
add_executable(test_odbcconnect test_odbcconnect.cpp)
