# add_executable(test_1_dbconnect test_1_dbconnect.cpp)
# add_executable(test_2_directExecute test_2_directExecute.cpp)
# add_executable(test_3_preparedExecute test_3_preparedExecute.cpp)
# add_executable(test_4_preparedStmt test_4_preparedStmt.cpp)
# add_executable(test_5_bindCol_One test_5_bindCol_One.cpp)
# add_executable(test_6_bindCol_Many test_6_bindCol_Many.cpp)
# add_executable(test_7_update test_7_update.cpp)
# add_executable(test_8_benchmark_bindcol test_8_benchmark_bindcol.cpp)
# add_executable(test_8_benchmark_directExecute test_8_benchmark_directExecute.cpp)
# add_executable(test_8_benchmark_prepareExecute test_8_benchmark_prepareExecute.cpp)
# add_executable(test_8_benchmark_prepareStmt test_8_benchmark_prepareStmt.cpp)
add_executable(test_9_getData test_9_getData.cpp)
add_executable(test_10_bindCol test_10_bindCol.cpp)